@@ -4,16 +4,16 @@ import static dev.langchain4j.internal.Utils.isNullOrEmpty;
 import static dev.langchain4j.model.googleai.Json.toJsonWithoutIndent;
 import static dev.langchain4j.model.googleai.SchemaMapper.fromJsonSchemaToGSchema;
 
+import java.util.List;
+import java.util.Objects;
+import java.util.stream.Collectors;
 import dev.langchain4j.agent.tool.ToolExecutionRequest;
 import dev.langchain4j.agent.tool.ToolSpecification;
 import dev.langchain4j.model.googleai.GeminiContent.GeminiPart.GeminiFunctionCall;
 import dev.langchain4j.model.googleai.GeminiGenerateContentRequest.GeminiTool;
 import dev.langchain4j.model.googleai.GeminiGenerateContentRequest.GeminiTool.GeminiCodeExecution;
-import java.util.List;
-import java.util.Objects;
 
 class FunctionMapper {
-
     static GeminiTool fromToolSepcsToGTool(List<ToolSpecification> specifications, boolean allowCodeExecution) {
         if (isNullOrEmpty(specifications)) {
             if (allowCodeExecution) {
@@ -54,6 +54,6 @@ class FunctionMapper {
                         .name(functionCall.name())
                         .arguments(toJsonWithoutIndent(functionCall.args()))
                         .build())
-                .toList();
+                .collect(Collectors.toList());
     }
 }
